# teachimint

./: Cargo.toml  justfile
backend/: Cargo.toml  db.redb
backend/src/: db.rs  error.rs  main.rs  opts.rs  service.rs
frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  constants.ts
frontend/src/components/: Navbar.tsx
frontend/src/components/auth/: Login.tsx  StudentLogin.tsx  TeacherLogin.tsx
frontend/src/components/cups/: Cups.tsx
frontend/src/components/inputs/: Button.tsx  Dropdown.tsx  TextInput.tsx  Toggle.tsx
frontend/src/components/nav/: Navbar.tsx
frontend/src/css/: config.css  custom.css  markdown.css  override.css
frontend/src/hooks/: useWebsocket.ts
frontend/src/pages/: Home.tsx  Login.tsx  Student.tsx  Teacher.tsx
frontend/src/providers/: WebsocketProvider.tsx  nostr-provider.tsx
src/: main.rs  opts.rs  service.rs  ws.rs
templates/: base.html  index.html  styles.css
