[package]
name = "teachimint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json", "ws"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
futures-util = "0.3.30"
tower-http = { version = "0.5.1", features = ["cors", "auth"] }
fedimint-core = "0.2.1"
clap = { version = "4.4.0", features = ["derive", "env"] }
redb = "1.5.0"
